clusters/hetzner/woodpecker/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: woodpecker
  labels:
    name: woodpecker
    database-access: "true"
