clusters/hetzner/woodpecker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: woodpecker-server
  namespace: woodpecker
  labels:
    app: woodpecker-server
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ci.codextechnologies.org
      secretName: woodpecker-tls
  rules:
    - host: ci.codextechnologies.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: woodpecker-server
                port:
                  number: 80
